--- a/style.css
+++ b/style.css
@@ -48,6 +48,18 @@ ul {
   height: 225px;
   width: 705px;
   margin: 50px auto;
+  line-height: 225px;
+}
+
+.title .base,
+.title .highlighted {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+.title .base {
+  color: #1c2c50;
 }
 
 .title .highlighted {
@@ -56,6 +68,8 @@ ul {
   left: 0;
   -webkit-clip-path: circle(21.5% at 16% 50%);
   clip-path: circle(21.5% at 16% 50%);
+  background: #1c2c50;
+  color: white;
 }
 
 .image-container {
