--- a/style.css
+++ b/style.css
@@ -170,17 +170,33 @@ ul {
   z-index: 3;
   top: 0;
   right: 3.5714%;
-  width: 480px;
+  width: 370px;
+  height: 120px;
+  margin-top: 0;
   background: #030926;
-  padding: 20px;
-  padding-top: 0;
+  padding-top: 15px;
   text-align: center;
 }
 
+.map-description > li {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  padding: 0 10px;
+  transition: opacity .7s;
+}
+
+.map-description > li.active {
+  z-index: 1;
+  opacity: 1;
+}
+
 .map-description h3 {
+  min-height: 27px;
   margin-top: 0;
   margin-bottom: 15px;
-  text-align: left;
+  text-align: center;
 }
 
 .map-description > p {
@@ -189,7 +205,7 @@ ul {
 
 .signs {
   max-width: 350px;
-  margin: 30px auto 0;
+  margin: 5px auto 0;
 }
 
 .signs li {
@@ -217,10 +233,15 @@ ul {
   background: #7fbff8;
 }
 
-.call-to-action {
+.map-description .call-to-action {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 15px;
+}
+
+.signs .call-to-action {
+  margin-top: 18px;
 }
 
 .call-to-action img {
